--- a/4_Comparacion BatchNorm.ipynb
+++ b/4_Comparacion BatchNorm.ipynb
@@ -2465,6 +2465,234 @@
    "source": [
     "print(MLP_models)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "81fefc78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Run ID: 05925b97182a43f98db25ca5fb2fbe72\n",
+      "Parámetros:\n",
+      "  HFlip: 0.0\n",
+      "  train_dir: skin-dataset-clasification/data/Split_smol/train/\n",
+      "  optimizer: Adam\n",
+      "  input_size: 32\n",
+      "  epochs: 200\n",
+      "  dropout: 0.1\n",
+      "  model: MLPClassifier\n",
+      "  batch_size: 16\n",
+      "  RBContrast: 0.0\n",
+      "  val_dir: skin-dataset-clasification/data/Split_smol/val/\n",
+      "  count_params: 1640201\n",
+      "  lr: 0.0001\n",
+      "  es_patience: 5\n",
+      "  VFlip: 0.5\n",
+      "  loss_fn: CrossEntropyLoss\n",
+      "------------------------------\n",
+      "Run ID: b21e76e4edd74d4f8688d0f9a5877f3a\n",
+      "Parámetros:\n",
+      "  HFlip: 0.0\n",
+      "  train_dir: skin-dataset-clasification/data/Split_smol/train/\n",
+      "  optimizer: Adam\n",
+      "  input_size: 64\n",
+      "  epochs: 200\n",
+      "  dropout: 0.2\n",
+      "  model: MLPClassifier\n",
+      "  batch_size: 128\n",
+      "  RBContrast: 0.0\n",
+      "  val_dir: skin-dataset-clasification/data/Split_smol/val/\n",
+      "  count_params: 6358793\n",
+      "  lr: 0.0001\n",
+      "  es_patience: 5\n",
+      "  VFlip: 0.5\n",
+      "  loss_fn: CrossEntropyLoss\n",
+      "------------------------------\n",
+      "Run ID: 987d607d03d54f668c2bfb03ac14db74\n",
+      "Parámetros:\n",
+      "  HFlip: 0.0\n",
+      "  train_dir: skin-dataset-clasification/data/Split_smol/train/\n",
+      "  optimizer: SGD (\n",
+      "Parameter Group 0\n",
+      "    dampening: 0\n",
+      "    differentiable: False\n",
+      "    foreach: None\n",
+      "    fused: None\n",
+      "    lr: 0.01\n",
+      "    maximize: False\n",
+      "    momentum: 0\n",
+      "    nesterov: False\n",
+      "    weight_decay: 0\n",
+      ")\n",
+      "  input_size: 32\n",
+      "  epochs: 200\n",
+      "  dropout: 0.3\n",
+      "  model: MLPClassifier\n",
+      "  batch_size: 16\n",
+      "  RBContrast: 0.0\n",
+      "  val_dir: skin-dataset-clasification/data/Split_smol/val/\n",
+      "  count_params: 1640201\n",
+      "  lr: 0.01\n",
+      "  es_patience: 5\n",
+      "  VFlip: 0.5\n",
+      "  loss_fn: CrossEntropyLoss\n",
+      "------------------------------\n",
+      "Run ID: 8c8bcb08bc0e4bc799ddbc4ad31d904a\n",
+      "Parámetros:\n",
+      "  HFlip: 0.0\n",
+      "  train_dir: skin-dataset-clasification/data/Split_smol/train/\n",
+      "  optimizer: SGD\n",
+      "  input_size: 128\n",
+      "  epochs: 200\n",
+      "  dropout: 0.0\n",
+      "  model: MLPClassifier\n",
+      "  batch_size: 16\n",
+      "  RBContrast: 0.0\n",
+      "  val_dir: skin-dataset-clasification/data/Split_smol/val/\n",
+      "  count_params: 25233161\n",
+      "  lr: 0.01\n",
+      "  es_patience: 5\n",
+      "  VFlip: 0.0\n",
+      "  loss_fn: CrossEntropyLoss\n",
+      "------------------------------\n",
+      "Run ID: f5a8e6731e9242ee945399f24cb482e9\n",
+      "Parámetros:\n",
+      "  HFlip: 0.0\n",
+      "  train_dir: skin-dataset-clasification/data/Split_smol/train/\n",
+      "  optimizer: Adam\n",
+      "  input_size: 32\n",
+      "  epochs: 200\n",
+      "  dropout: 0.1\n",
+      "  model: MLPClassifier\n",
+      "  batch_size: 64\n",
+      "  RBContrast: 0.5\n",
+      "  val_dir: skin-dataset-clasification/data/Split_smol/val/\n",
+      "  count_params: 1640201\n",
+      "  lr: 0.001\n",
+      "  es_patience: 5\n",
+      "  VFlip: 0.0\n",
+      "  loss_fn: CrossEntropyLoss\n",
+      "------------------------------\n",
+      "Run ID: c5cf44ada5674a97b0bfbb15062b7cff\n",
+      "Parámetros:\n",
+      "  HFlip: 0.5\n",
+      "  train_dir: skin-dataset-clasification/data/Split_smol/train/\n",
+      "  optimizer: Adam\n",
+      "  input_size: 128\n",
+      "  epochs: 200\n",
+      "  dropout: 0.0\n",
+      "  model: MLPClassifier\n",
+      "  batch_size: 16\n",
+      "  RBContrast: 0.0\n",
+      "  val_dir: skin-dataset-clasification/data/Split_smol/val/\n",
+      "  count_params: 25233161\n",
+      "  lr: 0.0001\n",
+      "  es_patience: 5\n",
+      "  VFlip: 0.5\n",
+      "  loss_fn: CrossEntropyLoss\n",
+      "------------------------------\n",
+      "Run ID: ad794d88aaf947b48f2d570878f6ea97\n",
+      "Parámetros:\n",
+      "  HFlip: 0.0\n",
+      "  train_dir: skin-dataset-clasification/data/Split_smol/train/\n",
+      "  optimizer: Adam\n",
+      "  input_size: 64\n",
+      "  epochs: 200\n",
+      "  dropout: 0.0\n",
+      "  model: MLPClassifier\n",
+      "  batch_size: 128\n",
+      "  RBContrast: 0.5\n",
+      "  val_dir: skin-dataset-clasification/data/Split_smol/val/\n",
+      "  count_params: 6358793\n",
+      "  lr: 0.001\n",
+      "  es_patience: 5\n",
+      "  VFlip: 0.0\n",
+      "  loss_fn: CrossEntropyLoss\n",
+      "------------------------------\n",
+      "Run ID: 863201a08e9342e39a19ffa09c855846\n",
+      "Parámetros:\n",
+      "  HFlip: 0.5\n",
+      "  train_dir: skin-dataset-clasification/data/Split_smol/train/\n",
+      "  optimizer: Adam\n",
+      "  input_size: 64\n",
+      "  epochs: 200\n",
+      "  dropout: 0.1\n",
+      "  model: MLPClassifier\n",
+      "  batch_size: 64\n",
+      "  RBContrast: 0.0\n",
+      "  val_dir: skin-dataset-clasification/data/Split_smol/val/\n",
+      "  count_params: 6358793\n",
+      "  lr: 0.001\n",
+      "  es_patience: 5\n",
+      "  VFlip: 0.0\n",
+      "  loss_fn: CrossEntropyLoss\n",
+      "------------------------------\n",
+      "Run ID: aadcce4035d94c65bc66e62f7446bcfc\n",
+      "Parámetros:\n",
+      "  HFlip: 0.0\n",
+      "  train_dir: skin-dataset-clasification/data/Split_smol/train/\n",
+      "  optimizer: Adam\n",
+      "  input_size: 32\n",
+      "  epochs: 200\n",
+      "  dropout: 0.0\n",
+      "  model: MLPClassifier\n",
+      "  batch_size: 16\n",
+      "  RBContrast: 0.5\n",
+      "  val_dir: skin-dataset-clasification/data/Split_smol/val/\n",
+      "  count_params: 1640201\n",
+      "  lr: 0.001\n",
+      "  es_patience: 5\n",
+      "  VFlip: 0.0\n",
+      "  loss_fn: CrossEntropyLoss\n",
+      "------------------------------\n",
+      "Run ID: 833d6fab64934dd4aaa274104477896d\n",
+      "Parámetros:\n",
+      "  HFlip: 0.0\n",
+      "  train_dir: skin-dataset-clasification/data/Split_smol/train/\n",
+      "  optimizer: Adam\n",
+      "  input_size: 128\n",
+      "  epochs: 200\n",
+      "  dropout: 0.3\n",
+      "  model: MLPClassifier\n",
+      "  batch_size: 128\n",
+      "  RBContrast: 0.5\n",
+      "  val_dir: skin-dataset-clasification/data/Split_smol/val/\n",
+      "  count_params: 25233161\n",
+      "  lr: 0.0001\n",
+      "  es_patience: 5\n",
+      "  VFlip: 0.0\n",
+      "  loss_fn: CrossEntropyLoss\n",
+      "------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "for run in MLP_models:\n",
+    "    print(f\"Run ID: {run.info.run_id}\")\n",
+    "    print(\"Parámetros:\")\n",
+    "    for key, value in run.data.params.items():\n",
+    "        print(f\"  {key}: {value}\")\n",
+    "    print(\"-\" * 30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a30aa38e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MLP_id = client.search_runs(\n",
+    "    experiment_ids=[experiment_id],\n",
+    "    filter_string=\"parameter.model = 'MLPClassifier' and parameter.model= attributes.status = 'FINISHED'\" ,\n",
+    "    order_by=[\"metrics.val_accuracy DESC\"],  # o cualquier métrica que uses\n",
+    "    max_results=10\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
