--- a/TP_integrador.ipynb
+++ b/TP_integrador.ipynb
@@ -257,12 +257,7 @@
    "id": "efd01da3",
    "metadata": {},
    "source": [
-    "El \"accuracy\" no siempre refleja el verdadero rendimiento de un modelo, especialmente en casos con clases desbalanceadas, por lo tanto puede ser relevante complementarlo con otras métricas como:\n",
-    "- La loss o función de perdida, que permite ver la correspondencia 1 a 1 entre la estimación y la anotación, se usa para visualizar como se confunde el modelo en el entrenamiento y validación.\n",
-    "\n",
-    "\n",
-    "para ver cuánto se está equivocando el modelo durante el entrenamiento y validación\n",
-    "\n"
+    "El \"accuracy\" ya sea del train o de la validación no siempre reflejan el verdadero rendimiento de un modelo, especialmente en casos con clases desbalanceadas, por lo tanto puede ser relevante complementarlo con otras métricas como la loss o función de perdida, que permite ver la correspondencia 1 a 1 entre la estimación y la anotación, se usa para visualizar como se confunde el modelo en el entrenamiento y validación."
    ]
   },
   {
