--- a/6_Analisis resultados.ipynb
+++ b/6_Analisis resultados.ipynb
@@ -5,7 +5,7 @@
    "id": "80158fb2",
    "metadata": {},
    "source": [
-    "Primer grupo:"
+    "A continuación se muestarn las comparaciones a partir de los 10 mejores modelos de la primer etapa (con dropout y sin batch normalization). Debido a que puede haber interferencia entre ellos, seleccionamos los que tienen mejor accuracy"
    ]
   },
   {
