--- a/6_Analisis resultados.ipynb
+++ b/6_Analisis resultados.ipynb
@@ -5,7 +5,7 @@
    "id": "80158fb2",
    "metadata": {},
    "source": [
-    "A continuación se muestarn las comparaciones a partir de los 10 mejores modelos de la primer etapa (con dropout y sin batch normalization). Debido a que puede haber interferencia entre ellos, seleccionamos los que tienen mejor accuracy"
+    "A continuación se muestarn las comparaciones a partir de los 10 mejores modelos de la primer etapa (con dropout y sin batch normalization). Se entrenaron 10 modelos replicando los hiperparámetros del grupo control y agregando BatchNorm (con dropout y batch normalization). Debido a que puede haber interferencias entre ellos, se decidió también entrenar 10 modelos con esos hiperparámetros pero sin dropout (sin dropout y con batch normalization). A partir de ello, se puede ver como afectan dropout y batchnorm al entrenamiento, tanto en conjunto como por separado."
    ]
   },
   {
