--- a/TP_integrador.ipynb
+++ b/TP_integrador.ipynb
@@ -582,7 +582,9 @@
    "cell_type": "markdown",
    "id": "307cca99",
    "metadata": {},
-   "source": []
+   "source": [
+    "Se puede ver como en la gran mayoria de los casos el entrenamiento fue mas rapido, habiendo una diferencia notable en el tiempo de entrenamiento y en la cantidad de epocas que entrenó."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -596,7 +598,9 @@
    "cell_type": "markdown",
    "id": "f8e6947e",
    "metadata": {},
-   "source": []
+   "source": [
+    "No se ve una diferencia significativa en las metrcas de validación, a lo sumo una leve mejora en los modelos con ambos hiperparámetros."
+   ]
   },
   {
    "cell_type": "markdown",
