--- a/TP_integrador.ipynb
+++ b/TP_integrador.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "0c24be56",
+   "metadata": {},
+   "source": [
+    "El siguiente archivo es la respuesta a las preguntas, tanto teóricas como prácticas, solicitadas en el Trabajo Final. La sección de preguntas prácticas se complementa a su vez con el archivo `6_Analisis resultados.ipynb` donde se pueden visualizar los resultados de las modificaciones implementadas junto con algúnas conclusiones."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "43c35112",
    "metadata": {},
    "source": [
@@ -599,7 +607,9 @@
    "id": "f8e6947e",
    "metadata": {},
    "source": [
-    "No se ve una diferencia significativa en las metrcas de validación, a lo sumo una leve mejora en los modelos con ambos hiperparámetros."
+    "Si bien muchas veces no se recomienda utilizar Batch Normalization a la vez que Dropout porque pueden interferir entre sí, en este caso se ve que los mejores modelos se obtuvieron con esta combinacíon. Sin embargo las mejoras no son significativas, por lo que tal vez no es convenible sumarle esa complejidad al problema./\n",
+    "\n",
+    "Haciendo un análisis de las causas de esto, más allá de que un MLP no es el mejor modelo para analizar imágenes y más aún si es que tienen tantos patrones espaciales como es en el caso del set de datos proporcionado, creemos que las mejoras se pueden ver ya que se optó por incluir dropout después de hacer la normalización por lo que el ruido de apagar neuronas no interfiere en el calculo anterior del batch norm, y esto puede ayudar a generalizar mejor. "
    ]
   },
   {
