--- a/TP_integrador.ipynb
+++ b/TP_integrador.ipynb
@@ -638,7 +638,9 @@
    "cell_type": "markdown",
    "id": "55dc95fb",
    "metadata": {},
-   "source": []
+   "source": [
+    "Analizando los graficos de train loss, se puede ver que en los modelos con batch normalization muestran curvas mas suaves, con descensos graduales (síntomas de entrenamiento saludables) y que además se estabilizan en valores mas bajos que aquellos modelos sin este hiperparametro. "
+   ]
   },
   {
    "cell_type": "markdown",
