--- a/5_Inicialización pesos.ipynb
+++ b/5_Inicialización pesos.ipynb
@@ -1737,6 +1737,35 @@
     "                }, step=epoch+1)                                                \n",
     "                                  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "31369360",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['05925b97182a43f98db25ca5fb2fbe72', '38cb17727d7f4a6c81aa21202109244b', '9581edec73984cd8bea0b0dff8bad7e0', '4ae4a772a7b643ef8c7942e38774bc86', 'fd7afe99f4f443ecb2cc1ea16fdba55c', '7cd0a9bd439f4d6fbc79c8197c89205a', 'b21e76e4edd74d4f8688d0f9a5877f3a', '987d607d03d54f668c2bfb03ac14db74', '0f3b7921cf4449d99c0bdf5ce637d39e', 'a7a0afbe7aaf491db3c3b2479a4a2ca4']\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_control=[]\n",
+    "for run in MLP_models:\n",
+    "    run_control.append(run.info.run_id)\n",
+    "print(run_control)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a91712e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
