--- a/TP_integrador.ipynb
+++ b/TP_integrador.ipynb
@@ -765,7 +765,11 @@
    "cell_type": "markdown",
    "id": "65de13fd",
    "metadata": {},
-   "source": []
+   "source": [
+    "Los modelos con Xavier o He presentaron una dinamica de entrenamiento mas saludables que los modelos con inicialización uniforme.\n",
+    "Los graficos de inicialización uniforme muestran una loss muy ruidosa y estabilizada en un valor alto. Además la mayoría de esos modelos tuvieron muy pocas epocas de entrebamiento y obtienen accuracy bajo.\n",
+    "Por otra parte, haciendo un análisis mas fino se puede notar como los modelos de Xavier presentan estos mismos defectos (a menor escala) si se los compara con los modelos con He. Esto era de esperarse, ya que se sabe que por lo general, la inicialización He es la que mejor funciona para las funciones de activación de la familia ReLu (y la inicializacion Xavier de este caso tamnbien es uniforme). "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -779,7 +783,9 @@
    "cell_type": "markdown",
    "id": "d3bc7a2e",
    "metadata": {},
-   "source": []
+   "source": [
+    "**ACA HABRIA QUE CHEQUEAR QUE PASA EN UNIFORME, SE VE QUE SUBE PERO NO ME ANIMO A DECIR Q ES NAN**"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -793,7 +799,9 @@
    "cell_type": "markdown",
    "id": "027f4155",
    "metadata": {},
-   "source": []
+   "source": [
+    "Analizando los graficos se puede concluir que el tipo de inicialización es un hiperparámetro clave que influye en el desempeño del modelo, ya que este define como será la dinámica del entrenamiento. Se puede ver que la gran mayoría de los modelos entrenados con los mismos inicializadores presentan resultados similares y ademas: Los mejores scores se obtuvieron con He, seguidos por Xavier con resultados bastante similares y finalmente aquellos con distribucion uniforme con métricas de validación muy pobres."
+   ]
   },
   {
    "cell_type": "markdown",
