--- a/TP_integrador.ipynb
+++ b/TP_integrador.ipynb
@@ -607,7 +607,7 @@
    "id": "f8e6947e",
    "metadata": {},
    "source": [
-    "Si bien muchas veces no se recomienda utilizar Batch Normalization a la vez que Dropout porque pueden interferir entre sí, en este caso se ve que los mejores modelos se obtuvieron con esta combinacíon. Sin embargo las mejoras no son significativas, por lo que tal vez no es convenible sumarle esa complejidad al problema./\n",
+    "Si bien muchas veces no se recomienda utilizar Batch Normalization a la vez que Dropout porque pueden interferir entre sí, en este caso se ve que los mejores modelos se obtuvieron con esta combinacíon. Sin embargo las mejoras no son significativas, por lo que tal vez no es convenible sumarle esa complejidad al problema.\n",
     "\n",
     "Haciendo un análisis de las causas de esto, más allá de que un MLP no es el mejor modelo para analizar imágenes y más aún si es que tienen tantos patrones espaciales como es en el caso del set de datos proporcionado, creemos que las mejoras se pueden ver ya que se optó por incluir dropout después de hacer la normalización por lo que el ruido de apagar neuronas no interfiere en el calculo anterior del batch norm, y esto puede ayudar a generalizar mejor. "
    ]
@@ -781,10 +781,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3bc7a2e",
+   "id": "8bff2758",
    "metadata": {},
    "source": [
-    "**ACA HABRIA QUE CHEQUEAR QUE PASA EN UNIFORME, SE VE QUE SUBE PERO NO ME ANIMO A DECIR Q ES NAN**"
+    "La inicialización uniforme generó modelos con loss de validación muy elevada y entrenamientos muy cortos pero no NaNs."
    ]
   },
   {
